--- a/Kezilabda/style.css
+++ b/Kezilabda/style.css
@@ -6,7 +6,7 @@ p {
     margin-right: 60px;
     margin-left: 60px;
   }
-#levih3{
-    margin-right: 60px;
-    margin-left: 60px;
+#levikep{
+    height: 400px;
+    width: 400px;
 }
