--- a/Kezilabda/style.css
+++ b/Kezilabda/style.css
@@ -8,8 +8,12 @@ p {
     margin-left: 60px;
 }
 #kép{
-    width: 30%;
-    height: 30%;
+    width: 100%;
+    height: 100%;
+}
+#m{
+  margin-left: 40px;
+  margin-right: 10px;
 }
 #levikep{
   width: 400px;
