--- a/Kezilabda/style.css
+++ b/Kezilabda/style.css
@@ -12,8 +12,8 @@ p {
     height: 100%;
 }
 #m{
-  margin-left: 40px;
-  margin-right: 15px;
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
 #levikep{
   width: 400px;
