--- a/Kezilabda/style.css
+++ b/Kezilabda/style.css
@@ -7,9 +7,8 @@ p {
     margin-right: 60px;
     margin-left: 60px;
 }
-#kép{
-    width: 100%;
-    height: 100%;
+#mkép{
+    width: 80%;
 }
 #m{
   margin-bottom: 10px;
