--- a/Projekt2/style.css
+++ b/Projekt2/style.css
@@ -8,14 +8,17 @@ body{
 #cont{
  background-color: beige;
 }
+
 #mkép{
     width: 85%;
     margin-top: 25px;
 }
-#margin{s
+
+#margin{
     margin-top: 25px;
     margin-right: 80px;
 }
+
 #margin2{
     margin-left: 30px;
 }
