--- a/Projekt2/style.css
+++ b/Projekt2/style.css
@@ -28,3 +28,9 @@ h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+#metro{
+    width: 70%;
+    height: 70%;
+    margin-top: 30px;
+   
+}
