--- a/Projekt2/slideshow.css
+++ b/Projekt2/slideshow.css
@@ -60,3 +60,8 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
+
+#sld{
+  width: 100%;
+  height: 100%;
+}
