--- a/Projekt2_kesz/Projekt2 (4)/Projekt2/style.css
+++ b/Projekt2_kesz/Projekt2 (4)/Projekt2/style.css
@@ -59,6 +59,14 @@ h1{
 #pido{
     background-color: aqua;
 }
+#kep1{
+    width: 300px;
+    height: 300px;
+}
+#delau{
+    width: 640px;
+    height: 420px;
+}
 
 
 
