--- a/Projekt3/Gyuri.css
+++ b/Projekt3/Gyuri.css
@@ -9,3 +9,15 @@ ul{
 #cliff{
    margin-top: 60px;
 }
+
+#a{
+   margin-top: 140px;
+}
+
+#b{
+   margin-top: 400px;
+}
+
+#c{
+   margin-top: 420px;
+}
