--- a/Projekt3/Gyuri.css
+++ b/Projekt3/Gyuri.css
@@ -15,9 +15,14 @@ ul{
 }
 
 #b{
-   margin-top: 400px;
+   margin-top: 480px;
 }
 
 #c{
-   margin-top: 420px;
+   margin-top: 550px;
+}
+
+#nyil{
+   width: 50px;
+   height: 40px;
 }
